<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Heart Rate Calculator App</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="targetHeartRateTextView">Target Heart Rate</string>
    <string name="maleTextView">Male</string>
    <string name="femaleTextView">Female</string>
    <string name="ageEditText">0</string>
    <string name="maleRadioButton">Male</string>
    <string name="femaleRadioButton">Female</string>
    <string name="ageTextView">My Age:</string>
    <string name="calculateButtonText">CALCULATE!</string>
    <string name="maleRadioButtonText">Male</string>
    <string name="femaleRadioButtonText">Female</string>
    <string name="lowHeartRateText">Low Heart Rate:</string>
    <string name="lowHeartRateEditText">0.0</string>
    <string name="lowHeartRateTextView">Low Heart Rate:</string>
    <string name="moderateHeartRateTextView">0.0</string>
    <string name="maxHeartRateText">Maximum Heart Rate:</string>
    <string name="maxHeartRateEditText">0.0</string>
    <string name="lowIntensityTextView">Low Intensity:</string>
    <string name="lowIntensityText">0.0</string>
    <string name="moderateIntensityTextView">Moderate Intensity:</string>
    <string name="maxIntensityText">Maximum Intensity:</string>
    <string name="maxIntensityTextEdit">0.0</string>
    <string name="moderateIntensityTextViewText">Moderate Intensity:</string>
    <string name="moderateIntensityText">0.0</string>

</resources>
